fixed header hover issue on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -99,7 +99,6 @@ p {
 					content: "";
 					width: 20px;
 					box-shadow: 0px 0px 0px 1px #ffff;
-					display: block;
 					margin: 0 auto;
 				}
 			}
